--- a/public/index.css
+++ b/public/index.css
@@ -1,11 +1,11 @@
 body {
     margin: 0; 
-      font-family: 'Montserrat';font-size: 18px;
+      font-family: 'Montserrat';font-size: 1.125rem;
     }
 #barreMenu{
     display: flex;
     width:100%;
-    height: 80px;
+    height: 5rem;
     position: absolute;
     overflow: hidden;
     background-color: #FEFEFE;
@@ -15,10 +15,10 @@ body {
 {
 width : 4%;
 float: left;
-padding-left: 15px;
-padding-bottom: 5px;
-padding-top: 5px;
-padding-right: 1px;
+padding-left: 0.9375rem;
+padding-bottom: 0.3125rem;
+padding-top: 0.3125rem;
+padding-right: 0.0625rem;
 }
 
   
@@ -29,17 +29,18 @@ padding-right: 1px;
     top:0;
     right: 0;
     width: fit-content;
-    height: 80px;
+    height: 5rem;
     position: absolute;
     overflow: hidden;
     text-align: center;
+    color: #152339; 
   }
   a {
       
     text-decoration: none;
     float: right;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0.875rem 1rem;
   }
   a:visited {  
     color: #152339; 
@@ -51,9 +52,9 @@ padding-right: 1px;
    a.name {
     color:#152339;  
     float: left;
-    padding-top: 30px;
+    padding-top: 1.875rem;
     font-weight: bolder;
-    font-size: 45px;
+    font-size: 2.8125rem;
     overflow: hidden;
   }
   a.name:hover
@@ -81,22 +82,22 @@ padding-right: 1px;
    }
    .talk
    {
-       left: 20px;
-       top: 100px;
+       left: 1.25rem;
+       top: 6.25rem;
        position: absolute;
-       height: 400px;
-       width: 600px;
-       padding : 5px 5px 5px 5px ;
+       height: 25rem;
+       width: 37.5rem;
+       padding : 0.3125rem 0.3125rem 0.3125rem 0.3125rem ;
        color: #152339;
    }
 
    .aPropos 
    {
        position: absolute;
-       height: 315px;
-       width : 686px;
-       top:180px;
-       right:5px;
+       height: 19.6875rem;
+       width : 42.875rem;
+       top:11.25rem;
+       right:0.3125rem;
    }
    #projet 
    {
@@ -109,50 +110,50 @@ padding-right: 1px;
    }
    .pro{
     position: absolute;
-    height: 260px;
-    width : 405px;
-    top:5px;
-    left:15px;
+    height: 16.25rem;
+    width : 25.3125rem;
+    top:0.3125rem;
+    left:0.9375rem;
    }
    .listProjets {
        display: flex;
        position: absolute;
-       height: 300px;
+       height: 18.75rem;
        width: 100%;
-    bottom: 0px;
+    bottom: 0rem;
     white-space: nowrap;
     overflow-y: hidden;
     overflow-x: auto;
    }
    .listProjets> div {
     background-color: #FEFEFE;
-    margin: 10px;
-    padding-top: 2px;
+    margin: 0.625rem;
+    padding-top: 0.125rem;
     text-align: center;
-    font-size: 30px;
-    width: 500px;
+    font-size: 1.875rem;
+    width: 31.25rem;
     flex: 0 0 auto;
   }
   .bande
   {
-      font-size: 12px;
+      font-size: 0.75rem;
       position : relative;
     background-color: rgba(254, 254, 254, 0.7);
      color : #152339;
-     top: 150px;
-     left: 45px;
-     width: 400px;
-     height: 70px;
+     top: 9.375rem;
+     left: 2.8125rem;
+     width: 25rem;
+     height: 4.375rem;
      text-align: center;
      align-items: center;
-     padding : 5px;
+     padding : 0.3125rem;
      
   }
   #projet > h1{
-      font-size: 50px;
+      font-size: 3.125rem;
       position: absolute;
     color:#123f89;
-    bottom: 260px;
+    bottom: 16.25rem;
     right : 40%;
   }
    #contact
@@ -168,46 +169,46 @@ padding-right: 1px;
    
    input[type=text] {
     width: 47%;
-    padding: 12px;
-    border: 1px solid #152339;
+    padding: 0.75rem;
+    border: 0.0625rem solid #152339;
     color: #152339;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     box-sizing: border-box;
-    margin-right: 9px;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-right: 0.5625rem;
+    margin-top: 0.375rem;
+    margin-bottom: 1rem;
     resize: vertical;
   }
   [type=email] {
     width: 47%;
-    padding: 12px;
-    border: 1px solid #152339;
+    padding: 0.75rem;
+    border: 0.0625rem solid #152339;
     color: #152339;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     box-sizing: border-box;
-    margin-left: 9px;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-left: 0.5625rem;
+    margin-top: 0.375rem;
+    margin-bottom: 1rem;
     resize: vertical;
   }
   textarea {
     width: 100%;
-    padding: 12px;
-    border: 1px solid #152339;
+    padding: 0.75rem;
+    border: 0.0625rem solid #152339;
     color: #152339;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-top: 0.375rem;
+    margin-bottom: 1rem;
     resize: vertical;
   }
   
   input[type=submit] {
     background-color: #152339;
     color: #FEFEFE;
-    padding: 12px 20px;
+    padding: 0.75rem 1.25rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     cursor: pointer;
   }
   
@@ -215,51 +216,51 @@ padding-right: 1px;
     background-color: #123f89;
   }
   #contact > h1{
-      padding-top: 10px;
+      padding-top: 0.625rem;
       text-align: center;
       font-weight: bolder;
       color: #152339;
 
   }
   .container {
-    width: 400px;
-    border-radius: 5px;
-    padding: 20px;
+    width: 25rem;
+    border-radius: 0.3125rem;
+    padding: 1.25rem;
     position: absolute;
-    left: 5px;
+    left: 0.3125rem;
   }
   #containInfo
   {
-    padding: 20px;
+    padding: 1.25rem;
     position: absolute;
-    right: 50px;
-    top: 110px;
+    right: 3.125rem;
+    top: 6.875rem;
     color: #152339;
   }
    .con{
     position: absolute;
-    height: 241px;
-    width : 437px;
-    bottom : 10px;
-    left:450px;
+    height: 15.0625rem;
+    width : 27.3125rem;
+    bottom : 0.625rem;
+    left:28.125rem;
    }
    #footer
    {
     display: flex;
     width:100%;
-    height: 250px;
+    height: 15.625rem;
     overflow: hidden;
     background-color: #152339;
     color: #FEFEFE;
-    bottom: 0px;
+    bottom: 0rem;
    }
    #part1{
     position: relative;
     display: grid;
     text-align: center;
     
-       left: 0px;
-       bottom: 0px;
+       left: 0rem;
+       bottom: 0rem;
        height: 100%;
        width: 33.3%;
     overflow: hidden;
@@ -268,7 +269,7 @@ padding-right: 1px;
    a.namef {
     color:#FEFEFE;  
     font-weight: bold;
-    font-size: 50px;
+    font-size: 3.15rem;
   }
   a.namef:hover
   {
@@ -277,12 +278,12 @@ padding-right: 1px;
   }
   #logof
   {
-    width: 130px;
-    height: 149px;
-    padding-left: 5px;
-padding-bottom: 5px;
-padding-top: 15px;
-padding-right: 1px;
+    width: 8.125rem;
+    height: 9.3125rem;
+    padding-left: 0.3125rem;
+padding-bottom: 0.3125rem;
+padding-top: 0.9375rem;
+padding-right: 0.0625rem;
 margin: 0 auto;
 display: block;
   }
@@ -292,69 +293,69 @@ display: block;
       text-align: center;
       align-items: center;
       margin: 0 auto;
-    bottom: 0px;
+    bottom: 0rem;
        width: 33.3%;
        height: 100%;
        background-color: #152339de;
 }
 #part3{
     position: relative;
-    padding-top: 50px;
-    padding-left: 15px;
-    right: 0px;
-    bottom: 0px;
+    padding-top: 3.15rem;
+    padding-left: 0.9375rem;
+    right: 0rem;
+    bottom: 0rem;
        width: 33.3%;
        height: 100%;
        
 }
 #tlfn {
-    padding-right: 10px;
-   width: 30px;
-   height: 20px;
+    padding-right: 0.625rem;
+   width: 1.875rem;
+   height: 1.25rem;
 }
 #mail{
-    padding-right: 10px;
-   width: 30px;
-   height: 20px;
+    padding-right: 0.625rem;
+   width: 1.875rem;
+   height: 1.25rem;
 }
 #place 
 {
-    padding-right: 13px;
-    padding-left: 7px;
-   width: 20px;
-   height: 30px;
+    padding-right: 0.8125rem;
+    padding-left: 0.4375rem;
+   width: 1.25rem;
+   height: 1.875rem;
 }
 
 #part4{
     position: relative;
-    border-top: 1px solid #FEFEFE;
-    bottom: 0px;
+    border-top: 0.0625rem solid #FEFEFE;
+    bottom: 0rem;
     background-color:#152339;
     width: 100%;
-    height: 30px;
+    height: 1.875rem;
     text-align: center;
     color: #FEFEFE;
-    padding-top: 10px;
+    padding-top: 0.625rem;
 }
 #mask5 {
     position: absolute;
-    bottom:39px;
-    right:0px;
-    width:30px;
-    height: 5px;
+    bottom:2.4375rem;
+    right:0rem;
+    width:1.875rem;
+    height: 0.3125rem;
     background-color:#152339;
 }
 #mask6
 {
     position: absolute;
-    bottom:39px;
-    left:0px;
-    width:30px;
-    height: 5px;
+    bottom:2.4375rem;
+    left:0rem;
+    width:1.875rem;
+    height: 0.3125rem;
     background-color:#152339;
 }
 #arrow
 {
-width: 18px;
-height: 30px;
+width: 1.125rem;
+height: 1.875rem;
 }
